# phawkes

./: .gitignore  README.md  pyproject.toml
examples/: quickstart.py
phawkes/: __init__.py  exp_mle.py  metrics.py  regimes.py  simulator.py  sum_exp_mle.py  sum_exp_sim.py
tests/: test_recovery.py  test_regimes.py  test_sum_exp_recovery.py
