[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phawkes"
version = "0.2.0"
description = "Pure-Python multivariate Hawkes process simulation and MLE (exponential kernels), no C++ deps"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Pierre Samson" },
    { name = "Claude Opus (Anthropic)", email = "noreply@anthropic.com" },
]
keywords = ["hawkes", "point-process", "self-exciting", "finance", "contagion", "mle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/darw007d/phawkes"
Issues = "https://github.com/darw007d/phawkes/issues"

[tool.setuptools.packages.find]
include = ["phawkes*"]
exclude = ["tests*", "examples*"]
